# QCommon

./: .gitignore  CMakeLists.txt  main.cpp
QCommon/: CMakeLists.txt  file.cpp  file.h
Test/: Test.cpp  Test.h
